--- a/TeaTime/Views/Shared/_Layout.cshtml
+++ b/TeaTime/Views/Shared/_Layout.cshtml
@@ -23,13 +23,18 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">首頁</a>
+                            <a class="nav-link text-dark" asp-area="Customer" asp-controller="Home" asp-action="Index">首頁</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Category" asp-action="Index">類別</a>
+                            <a class="nav-link text-dark" asp-area="Customer" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                        <!--將類別設定為只有Admin可以下拉選擇-->
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle text-dark" data-bs-toggle ="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">內容管理</a>
+							<div class="dropdown-menu">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Category" asp-action="Index">類別</a>
+                                <div class="dropdown-divider"></div>
+                            </div>
                         </li>
                     </ul>
                 </div>
